[gd_scene load_steps=13 format=3 uid="uid://dx0pa4pd6g2t8"]

[ext_resource type="Texture2D" uid="uid://qexj00svyc8b" path="res://sprites/Tileset.png" id="1_ijv6e"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="2_htgmi"]
[ext_resource type="Script" path="res://scripts/GameTime.gd" id="2_q6nif"]
[ext_resource type="Script" path="res://scripts/BuildingSelector.gd" id="3_edawl"]
[ext_resource type="Script" path="res://scripts/City.gd" id="4_81to3"]
[ext_resource type="AudioStream" uid="uid://o4t2bb4bb4cj" path="res://sounds/Invalid.wav" id="4_j20in"]
[ext_resource type="AudioStream" uid="uid://wy4dd56ibdw3" path="res://sounds/Select.wav" id="5_vatlq"]
[ext_resource type="AudioStream" uid="uid://btcqk4ydek6ey" path="res://sounds/Build.wav" id="6_bnjhj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w7eb6"]
texture = ExtResource("1_ijv6e")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_tye8k"]
sources/0 = SubResource("TileSetAtlasSource_w7eb6")

[sub_resource type="LabelSettings" id="LabelSettings_b4m3x"]
line_spacing = 1.0
font_size = 14
shadow_color = Color(0, 0, 0, 0.592157)

[sub_resource type="LabelSettings" id="LabelSettings_0ewpq"]
line_spacing = 1.0
font_size = 14
shadow_color = Color(0, 0, 0, 1)

[node name="Map" type="TileMap"]
position = Vector2(80, 80)
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_tye8k")
format = 2
layer_0/name = "Terrain"
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 0, 0, 917504, 0, 0, 983040, 0, 0, 1048576, 0, 0, 1114112, 0, 0, 1179648, 0, 0, 1245184, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 0, 0, 917505, 0, 0, 983041, 0, 0, 1048577, 0, 0, 1114113, 0, 0, 1179649, 0, 0, 1245185, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 720898, 0, 0, 786434, 0, 0, 851970, 0, 0, 917506, 0, 0, 983042, 0, 0, 1048578, 0, 0, 1114114, 0, 0, 1179650, 0, 0, 1245186, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 720899, 0, 0, 786435, 0, 0, 851971, 0, 0, 917507, 0, 0, 983043, 0, 0, 1048579, 0, 0, 1114115, 0, 0, 1179651, 0, 0, 1245187, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, 720900, 0, 0, 786436, 0, 0, 851972, 0, 0, 917508, 0, 0, 983044, 0, 0, 1048580, 0, 0, 1114116, 0, 0, 1179652, 0, 0, 1245188, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 655365, 0, 0, 720901, 0, 0, 786437, 0, 0, 851973, 0, 0, 917509, 0, 0, 983045, 0, 0, 1048581, 0, 0, 1114117, 0, 0, 1179653, 0, 0, 1245189, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, 720902, 0, 0, 786438, 0, 0, 851974, 0, 0, 917510, 0, 0, 983046, 0, 0, 1048582, 0, 0, 1114118, 0, 0, 1179654, 0, 0, 1245190, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 720903, 0, 0, 786439, 0, 0, 851975, 0, 0, 917511, 0, 0, 983047, 0, 0, 1048583, 0, 0, 1114119, 0, 0, 1179655, 0, 0, 1245191, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 720904, 0, 0, 786440, 0, 0, 851976, 0, 0, 917512, 0, 0, 983048, 0, 0, 1048584, 0, 0, 1114120, 0, 0, 1179656, 0, 0, 1245192, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 0, 0, 655369, 0, 0, 720905, 0, 0, 786441, 0, 0, 851977, 0, 0, 917513, 0, 0, 983049, 0, 0, 1048585, 0, 0, 1114121, 0, 0, 1179657, 0, 0, 1245193, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 720906, 0, 0, 786442, 0, 0, 851978, 0, 0, 917514, 0, 0, 983050, 0, 0, 1048586, 0, 0, 1114122, 0, 0, 1179658, 0, 0, 1245194, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 720907, 0, 0, 786443, 0, 0, 851979, 0, 0, 917515, 0, 0, 983051, 0, 0, 1048587, 0, 0, 1114123, 0, 0, 1179659, 0, 0, 1245195, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, 720908, 0, 0, 786444, 0, 0, 851980, 0, 0, 917516, 0, 0, 983052, 0, 0, 1048588, 0, 0, 1114124, 0, 0, 1179660, 0, 0, 1245196, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 0, 0, 655373, 0, 0, 720909, 0, 0, 786445, 0, 0, 851981, 0, 0, 917517, 0, 0, 983053, 0, 0, 1048589, 0, 0, 1114125, 0, 0, 1179661, 0, 0, 1245197, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 720910, 0, 0, 786446, 0, 0, 851982, 0, 0, 917518, 0, 0, 983054, 0, 0, 1048590, 0, 0, 1114126, 0, 0, 1179662, 0, 0, 1245198, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 720911, 0, 0, 786447, 0, 0, 851983, 0, 0, 917519, 0, 0, 983055, 0, 0, 1048591, 0, 0, 1114127, 0, 0, 1179663, 0, 0, 1245199, 0, 0, 16, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 524304, 0, 0, 589840, 0, 0, 655376, 0, 0, 720912, 0, 0, 786448, 0, 0, 851984, 0, 0, 917520, 0, 0, 983056, 0, 0, 1048592, 0, 0, 1114128, 0, 0, 1179664, 0, 0, 1245200, 0, 0, 17, 65536, 0, 65553, 65536, 0, 131089, 65536, 0, 196625, 65536, 0, 262161, 65536, 0, 327697, 65536, 0, 393233, 65536, 0, 458769, 65536, 0, 524305, 65536, 0, 589841, 65536, 0, 655377, 65536, 0, 720913, 65536, 0, 786449, 65536, 0, 851985, 65536, 0, 917521, 65536, 0, 983057, 65536, 0, 1048593, 65536, 0, 1114129, 65536, 0, 1179665, 65536, 0, 1245201, 65536, 0, 18, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 655378, 0, 0, 720914, 0, 0, 786450, 0, 0, 851986, 0, 0, 917522, 0, 0, 983058, 0, 0, 1048594, 0, 0, 1114130, 0, 0, 1179666, 0, 0, 1245202, 0, 0, 19, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 262163, 0, 0, 327699, 0, 0, 393235, 0, 0, 458771, 0, 0, 524307, 0, 0, 589843, 0, 0, 655379, 0, 0, 720915, 0, 0, 786451, 0, 0, 851987, 0, 0, 917523, 0, 0, 983059, 0, 0, 1048595, 0, 0, 1114131, 0, 0, 1179667, 0, 0, 1245203, 0, 0)

[node name="GameTime" type="Timer" parent="."]
script = ExtResource("2_q6nif")
timeStep = 2.0

[node name="Player" type="Node" parent="."]
script = ExtResource("2_htgmi")

[node name="Preview" type="Sprite2D" parent="Player"]
visible = false
self_modulate = Color(1, 1, 1, 0.588235)
position = Vector2(80, 80)
scale = Vector2(2, 2)
texture = ExtResource("1_ijv6e")
hframes = 4
vframes = 2

[node name="InvalidSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("4_j20in")

[node name="SelectSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("5_vatlq")
volume_db = -20.0

[node name="BuildSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("6_bnjhj")
volume_db = -10.0

[node name="NoMoney" type="Label" parent="Player"]
visible = false
offset_left = 296.0
offset_top = 176.0
offset_right = 448.0
offset_bottom = 202.0
text = "Not Enough Money!"

[node name="City" type="Node" parent="."]
script = ExtResource("4_81to3")

[node name="UI" type="CanvasLayer" parent="."]

[node name="BuildingsSelector" type="VBoxContainer" parent="UI"]
offset_left = 8.0
offset_top = 112.0
offset_right = 80.0
offset_bottom = 760.0

[node name="OilPowerPlant" type="Control" parent="UI/BuildingsSelector"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_edawl")
id = 4
output = 140
cost = 10000
upkeep = 100

[node name="Icon" type="Sprite2D" parent="UI/BuildingsSelector/OilPowerPlant"]
position = Vector2(32, 32)
scale = Vector2(4, 4)
texture = ExtResource("1_ijv6e")
hframes = 4
vframes = 2
frame = 4

[node name="Name" type="Label" parent="UI/BuildingsSelector/OilPowerPlant"]
layout_mode = 0
offset_left = -16.0
offset_top = -40.0
offset_right = 80.0
offset_bottom = 6.0
text = "Oil Power Plant"
label_settings = SubResource("LabelSettings_b4m3x")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Cost" type="Label" parent="UI/BuildingsSelector/OilPowerPlant"]
layout_mode = 0
offset_top = 64.0
offset_right = 64.0
offset_bottom = 87.0
text = "Cost: 100"
label_settings = SubResource("LabelSettings_b4m3x")

[node name="Upkeep" type="Label" parent="UI/BuildingsSelector/OilPowerPlant"]
layout_mode = 0
offset_left = -8.0
offset_top = 80.0
offset_right = 79.0
offset_bottom = 106.0
text = "Upkeep: 20"
label_settings = SubResource("LabelSettings_0ewpq")

[node name="Output" type="Label" parent="UI/BuildingsSelector/OilPowerPlant"]
layout_mode = 0
offset_left = -8.0
offset_top = 96.0
offset_right = 99.0
offset_bottom = 122.0
text = "OutPut: 100"
label_settings = SubResource("LabelSettings_0ewpq")

[node name="CoalPowerPlant" type="Control" parent="UI/BuildingsSelector"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_edawl")
id = 6
output = 15
cost = 1000
upkeep = 12
atlasPos = Vector2i(2, 1)

[node name="Icon" type="Sprite2D" parent="UI/BuildingsSelector/CoalPowerPlant"]
position = Vector2(32, 32)
scale = Vector2(4, 4)
texture = ExtResource("1_ijv6e")
hframes = 4
vframes = 2
frame = 6

[node name="Name" type="Label" parent="UI/BuildingsSelector/CoalPowerPlant"]
offset_left = -16.0
offset_top = -45.0
offset_right = 80.0
offset_bottom = 1.0
text = "Coal Power Plant"
label_settings = SubResource("LabelSettings_b4m3x")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Cost" type="Label" parent="UI/BuildingsSelector/CoalPowerPlant"]
offset_top = 64.0
offset_right = 64.0
offset_bottom = 87.0
text = "Cost: 100"
label_settings = SubResource("LabelSettings_b4m3x")

[node name="Upkeep" type="Label" parent="UI/BuildingsSelector/CoalPowerPlant"]
offset_left = -8.0
offset_top = 80.0
offset_right = 79.0
offset_bottom = 106.0
text = "Upkeep: 20"
label_settings = SubResource("LabelSettings_0ewpq")

[node name="Output" type="Label" parent="UI/BuildingsSelector/CoalPowerPlant"]
offset_left = -8.0
offset_top = 96.0
offset_right = 99.0
offset_bottom = 122.0
text = "OutPut: 100"
label_settings = SubResource("LabelSettings_0ewpq")

[node name="WindTurbines" type="Control" parent="UI/BuildingsSelector"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_edawl")
id = 5
output = 12
cost = 2000
upkeep = 5
atlasPos = Vector2i(1, 1)

[node name="Icon" type="Sprite2D" parent="UI/BuildingsSelector/WindTurbines"]
position = Vector2(32, 32)
scale = Vector2(4, 4)
texture = ExtResource("1_ijv6e")
hframes = 4
vframes = 2
frame = 5

[node name="Name" type="Label" parent="UI/BuildingsSelector/WindTurbines"]
offset_left = -16.0
offset_top = -42.0
offset_right = 80.0
offset_bottom = 4.0
text = "Wind Turbines"
label_settings = SubResource("LabelSettings_b4m3x")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Cost" type="Label" parent="UI/BuildingsSelector/WindTurbines"]
offset_top = 64.0
offset_right = 64.0
offset_bottom = 87.0
text = "Cost: 100"
label_settings = SubResource("LabelSettings_b4m3x")

[node name="Upkeep" type="Label" parent="UI/BuildingsSelector/WindTurbines"]
offset_left = -8.0
offset_top = 80.0
offset_right = 79.0
offset_bottom = 106.0
text = "Upkeep: 20"
label_settings = SubResource("LabelSettings_0ewpq")

[node name="Output" type="Label" parent="UI/BuildingsSelector/WindTurbines"]
offset_left = -8.0
offset_top = 96.0
offset_right = 99.0
offset_bottom = 122.0
text = "OutPut: 100"
label_settings = SubResource("LabelSettings_0ewpq")

[node name="PowerDam" type="Control" parent="UI/BuildingsSelector"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_edawl")
id = 7
output = 450
cost = 50000
upkeep = 100
atlasPos = Vector2i(3, 1)

[node name="Icon" type="Sprite2D" parent="UI/BuildingsSelector/PowerDam"]
position = Vector2(32, 32)
scale = Vector2(4, 4)
texture = ExtResource("1_ijv6e")
hframes = 4
vframes = 2
frame = 7

[node name="Name" type="Label" parent="UI/BuildingsSelector/PowerDam"]
offset_left = -16.0
offset_top = -31.0
offset_right = 80.0
offset_bottom = 15.0
text = "Power Dam"
label_settings = SubResource("LabelSettings_b4m3x")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Cost" type="Label" parent="UI/BuildingsSelector/PowerDam"]
offset_top = 64.0
offset_right = 64.0
offset_bottom = 87.0
text = "Cost: 100"
label_settings = SubResource("LabelSettings_b4m3x")

[node name="Upkeep" type="Label" parent="UI/BuildingsSelector/PowerDam"]
offset_left = -8.0
offset_top = 80.0
offset_right = 79.0
offset_bottom = 106.0
text = "Upkeep: 20"
label_settings = SubResource("LabelSettings_0ewpq")

[node name="Output" type="Label" parent="UI/BuildingsSelector/PowerDam"]
offset_left = -8.0
offset_top = 96.0
offset_right = 99.0
offset_bottom = 122.0
text = "OutPut: 100"
label_settings = SubResource("LabelSettings_0ewpq")

[node name="PlayerMoney" type="Label" parent="UI"]
offset_left = 8.0
offset_top = 8.0
offset_right = 106.0
offset_bottom = 34.0
text = "Money: 1000"

[node name="MonthlyExpenses" type="Label" parent="UI"]
offset_left = 128.0
offset_top = 8.0
offset_right = 289.0
offset_bottom = 34.0
text = "Monthly Expenses: 0"

[node name="Monthly Taxes" type="Label" parent="UI"]
offset_left = 128.0
offset_top = 24.0
offset_right = 289.0
offset_bottom = 50.0
text = "Monthly Taxes: 0"

[node name="Profit" type="Label" parent="UI"]
offset_left = 128.0
offset_top = 40.0
offset_right = 289.0
offset_bottom = 66.0
text = "Profit: 0
"

[node name="PowerOutput" type="Label" parent="UI"]
offset_left = 328.0
offset_top = 8.0
offset_right = 489.0
offset_bottom = 34.0
text = "Power Output: 0 mW"

[node name="PowerDemand" type="Label" parent="UI"]
offset_left = 328.0
offset_top = 24.0
offset_right = 499.0
offset_bottom = 50.0
text = "Power Demand: 0 mW"

[node name="DevelopmentGrowth" type="Label" parent="UI"]
offset_left = 520.0
offset_top = 8.0
offset_right = 704.0
offset_bottom = 34.0
text = "Development Growth: 0"
